ffi/poc/cpp/corpus/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 6: a host-driven loop over one repeated/packed/map field. */
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Duration`. */
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `ResultRaw`. */
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `TaskOptions`. */
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `TaskOutput`. */
struct ak_dfix_TaskOutput {
  uint8_t success;
  struct ak_span error;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `TaskDetailed`. */
struct ak_dfix_TaskDetailed {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_span owner_pod_id;
  int32_t status;
  struct ak_span status_message;
  struct ak_dfix_TaskOptions options;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp submitted_at;
  struct ak_dfix_Timestamp started_at;
  struct ak_dfix_Timestamp ended_at;
  struct ak_dfix_Timestamp pod_ttl;
  struct ak_dfix_TaskOutput output;
  struct ak_span pod_hostname;
  struct ak_dfix_Timestamp received_at;
  struct ak_dfix_Timestamp acquired_at;
  struct ak_dfix_Duration creation_to_end_duration;
  struct ak_dfix_Duration processing_to_end_duration;
  struct ak_span initial_task_id;
  struct ak_dfix_Duration received_to_end_duration;
  struct ak_dfix_Timestamp processed_at;
  struct ak_dfix_Timestamp fetched_at;
  struct ak_span payload_id;
  struct ak_span created_by;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `TaskSummary`. */
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Empty`. */
struct ak_dfix_Empty {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Probe`. */
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `MetricsBatch`. */
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `ListResultsResponse`. */
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `ListTasksDetailedResponse`. */
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `ListTaskSummaryResponse`. */
struct ak_dfix_ListTaskSummaryResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode vtable for `Duration`. */
struct ak_evt_Duration {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Duration` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Duration {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Duration *);
};
/* Encode vtable for `ResultRaw`. */
struct ak_evt_ResultRaw {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `ResultRaw` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ResultRaw {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ResultRaw *);
};
/* Encode vtable for `TaskOptions`. */
struct ak_evt_TaskOptions {
  ak_loop_f loop_options;
};
/* Decode vtable for `TaskOptions` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOptions {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptions *);
  void (*add_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `TaskOutput`. */
struct ak_evt_TaskOutput {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `TaskOutput` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOutput {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOutput *);
};
/* Encode vtable for `TaskDetailed`. */
struct ak_evt_TaskDetailed {
  ak_loop_f loop_parent_task_ids;
  ak_loop_f loop_data_dependencies;
  ak_loop_f loop_expected_output_ids;
  ak_loop_f loop_retry_of_ids;
  ak_loop_f loop_options_options;
};
/* Decode vtable for `TaskDetailed` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskDetailed {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskDetailed *);
  void (*add_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `TaskSummary`. */
struct ak_evt_TaskSummary {
  ak_loop_f loop_options_options;
};
/* Decode vtable for `TaskSummary` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskSummary {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskSummary *);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `Probe`. */
struct ak_evt_Probe {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Probe` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Probe {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Probe *);
};
/* Encode vtable for `Empty`. */
struct ak_evt_Empty {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Empty` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Empty {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Empty *);
};
/* Encode vtable for `UploadResultData`. */
struct ak_evt_UploadResultData {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `UploadResultData` (the push family, ABI v1 section 7.1). */
struct ak_dvt_UploadResultData {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultData *);
};
/* Encode vtable for `MetricsBatch`. */
struct ak_evt_MetricsBatch {
  ak_loop_f loop_ticks;
  ak_loop_f loop_values;
  ak_loop_f loop_codes;
  ak_loop_f loop_flags;
  ak_loop_f loop_statuses;
};
/* Decode vtable for `MetricsBatch` (the push family, ABI v1 section 7.1). */
struct ak_dvt_MetricsBatch {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_MetricsBatch *);
  void (*add_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
/* Encode vtable for `Pair`. */
struct ak_evt_Pair {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `Pair` (the push family, ABI v1 section 7.1). */
struct ak_dvt_Pair {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Pair *);
};
/* Encode vtable for `ListResultsResponse`. */
struct ak_evt_ListResultsResponse {
  ak_loop_f loop_results;
};
/* Decode vtable for `ListResultsResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListResultsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListResultsResponse *);
  void (*add_results)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ResultRaw *, int32_t);
};
/* Encode vtable for `ListTasksDetailedResponse`. */
struct ak_evt_ListTasksDetailedResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskDetailed *elem_tasks;
};
/* Decode vtable for `ListTasksDetailedResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListTasksDetailedResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTasksDetailedResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskDetailed *);
  void (*add_tasks_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `ListTaskSummaryResponse`. */
struct ak_evt_ListTaskSummaryResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskSummary *elem_tasks;
};
/* Decode vtable for `ListTaskSummaryResponse` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ListTaskSummaryResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTaskSummaryResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskSummary *);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
/* Encode vtable for `ListProbeResponse`. */
struct ak_evt_ListProbeResponse {
  ak_loop_f loop_probes;
};