ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs


/// Encode vtable for `Duration`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Duration {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Duration` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Duration {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Duration),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `ResultRaw`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ResultRaw {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ResultRaw` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ResultRaw {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ResultRaw),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `TaskOptions`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOptions {
    pub loop_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskOptions` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOptions {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOptions),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub unk_options: Option<ak_unk_f>,
    pub add_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `TaskOutput`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOutput {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `TaskOutput` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOutput {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOutput),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskDetailed {
    pub loop_parent_task_ids: Option<ak_loop_f>,
    pub loop_data_dependencies: Option<ak_loop_f>,
    pub loop_expected_output_ids: Option<ak_loop_f>,
    pub loop_retry_of_ids: Option<ak_loop_f>,
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskDetailed` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskDetailed {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskDetailed),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub add_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub unk_options_options: Option<ak_unk_f>,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `TaskSummary`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskSummary {
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskSummary` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskSummary {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskSummary),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub unk_options_options: Option<ak_unk_f>,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `Probe`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Probe {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Probe` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Probe {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Probe),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `Empty`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Empty {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Empty` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Empty {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Empty),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `UploadResultData`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_UploadResultData {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `UploadResultData` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_UploadResultData {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_UploadResultData),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `MetricsBatch`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_MetricsBatch {
    pub loop_ticks: Option<ak_loop_f>,
    pub loop_values: Option<ak_loop_f>,
    pub loop_codes: Option<ak_loop_f>,
    pub loop_flags: Option<ak_loop_f>,
    pub loop_statuses: Option<ak_loop_f>,
}

/// Decode vtable for `MetricsBatch` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_MetricsBatch {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_MetricsBatch),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub add_ticks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_values: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const f64, i32),
    >,
    pub add_codes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
    pub add_flags: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const u8, i32),
    >,
    pub add_statuses: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
}

/// Encode vtable for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Pair {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Pair` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Pair {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Pair),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListResultsResponse {
    pub loop_results: Option<ak_loop_f>,
}

/// Decode vtable for `ListResultsResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListResultsResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListResultsResponse),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub unk_results: Option<ak_unk_f>,
    pub add_results: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ResultRaw, i32),
    >,
}

/// Encode vtable for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTasksDetailedResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskDetailed,
}

/// Decode vtable for `ListTasksDetailedResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTasksDetailedResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTasksDetailedResponse),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub unk_tasks: Option<ak_unk_f>,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskDetailed),
    >,
    pub add_tasks_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTaskSummaryResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskSummary,
}

/// Decode vtable for `ListTaskSummaryResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTaskSummaryResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTaskSummaryResponse),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
    pub unk_tasks: Option<ak_unk_f>,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskSummary),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListProbeResponse {
    pub loop_probes: Option<ak_loop_f>,
}
